fixed slight layout issues in css, added color and font size specs from the sxprcted-result image, and managed to use flexbox and ifs tools to make the layout fully responsive and mobile friendly while still maintaining desktop screen layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<p class="t1">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
 				<button class="signup">Sign up</button>
 			</div>
-			<img src="#" height="175px" width="300px">
+			<img class="pic" src="01.png" height="220px" width="300px">
 		</div>	
 	</div>
 	
